[package]
name = "dkg-collator"
description = "Webb Protocol DKG Collator"
build = "build.rs"
version = "3.0.0"
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[package.metadata.wasm-pack.profile.release]
# `wasm-opt` has some problems on linux, see
# https://github.com/rustwasm/wasm-pack/issues/781 etc.
wasm-opt = false

[[bin]]
name = "dkg-collator"

[features]
default = []
runtime-benchmarks = ["dkg-rococo-runtime/runtime-benchmarks"]
rococo-native = [
	"polkadot-cli/rococo-native"
]
try-runtime = ["dkg-rococo-runtime/try-runtime"]

[dependencies]
log = { workspace = true }
codec = { package = "parity-scale-codec", version = "3" }
serde = { workspace = true }
hex-literal = { workspace = true }
clap = { workspace = true }

# RPC related Dependencies
jsonrpsee = { workspace = true }

# Local Dependencies
dkg-rococo-runtime = { workspace = true }
dkg-runtime-primitives = { workspace = true }

# Substrate Dependencies
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

pallet-transaction-payment-rpc = { workspace = true }

substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

## Substrate Client Dependencies
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-tracing = { workspace = true }
try-runtime-cli = { workspace = true }


## Substrate Primitive Dependencies
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }

# Cumulus dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }

# Polkadot dependencies
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
