[package]
name = "dkg-standalone-node"
version = "3.0.0"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Webb tools"]
homepage = "https://webb.tools/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/webb-tools/dkg-substrate"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "dkg-standalone-node"

[dependencies]
futures = "0.3.15"
clap = { version = "3.0", features = ["derive"] }
rand = "0.7.2"
codec = { package = "parity-scale-codec", version = "3" }
hex-literal = { package = "hex-literal", version = "0.3.3" }

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", features = [
	"wasmtime",
] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", features = [
	"wasmtime",
] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", features = [
	"wasmtime",
] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.15.0", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

# Local dependencies
dkg-gadget = { path = "../../dkg-gadget", default-features = false }
dkg-runtime-primitives = { path = "../../dkg-runtime-primitives", default-features = false }
dkg-primitives = { path = "../../dkg-primitives", default-features = false }
dkg-standalone-runtime = { version = "3.0.0", path = "../runtime" }


[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = []
runtime-benchmarks = ["dkg-standalone-runtime/runtime-benchmarks"]
integration-tests = ["dkg-standalone-runtime/integration-tests"]
manual-seal = ["dkg-standalone-runtime/manual-seal"]
