[package]
name = "dkg-standalone-node"
version = "3.0.0"
build = "build.rs"
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "dkg-standalone-node"

[dependencies]
futures = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
hex-literal = { workspace = true }

sc-cli = { workspace = true }
sp-core = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-keystore = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus-aura = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus = { workspace = true }
sp-inherents = { workspace = true }
sc-finality-grandpa = { workspace = true }
sp-finality-grandpa = { workspace = true }
sc-client-api = { workspace = true }
sp-runtime = { workspace = true }
sc-network-common = { workspace = true }
sp-timestamp = { workspace = true }
pallet-im-online = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }
sp-api ={ workspace = true }
sp-keyring = { workspace = true }
sc-rpc-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true }
sc-basic-authorship = { workspace = true }
substrate-frame-rpc-system = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-bridge-registry = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }

# Local dependencies
dkg-gadget = { workspace = true, features = ["testing"] }
dkg-runtime-primitives = { workspace = true }
dkg-primitives = { workspace = true }
dkg-standalone-runtime = { workspace = true }
dkg-logging = { workspace = true }
tokio = { workspace = true, features = ["rt"] }


[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = ["dkg-standalone-runtime/runtime-benchmarks"]
integration-tests = ["dkg-standalone-runtime/integration-tests"]
manual-seal = ["dkg-standalone-runtime/manual-seal"]
tracing = ["dkg-gadget/tracing"]
