[package]
name = "dkg-standalone-runtime"
version = "3.0.0"
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Local dependencies
dkg-runtime-primitives = { workspace = true, default-features = false }
pallet-dkg-metadata = { workspace = true }
pallet-dkg-proposals = { workspace = true }
pallet-dkg-proposal-handler = { workspace = true }
pallet-bridge-registry = { workspace = true }

codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { workspace = true }

pallet-aura = { workspace = true }
pallet-indices = { workspace = true }
pallet-session = { workspace = true }
pallet-staking = { workspace = true }
pallet-balances = { workspace = true }
frame-support = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-randomness-collective-flip = { workspace = true }
pallet-sudo = { workspace = true }
frame-system = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-nomination-pools = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
pallet-offences = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
frame-election-provider-support = { workspace = true }
sp-staking = { workspace = true }
pallet-identity = { workspace = true }
pallet-im-online = { workspace = true }
pallet-utility = { workspace = true }
cumulus-primitives-core = { workspace = true }

# Used for the node template"s RPCs
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }
hex-literal = { workspace = true, optional = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-indices/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-nomination-pools/std",
	"pallet-bags-list/std",
	"pallet-identity/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"pallet-offences/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-session/std",
	"pallet-staking/std",
	"pallet-im-online/std",
	"pallet-election-provider-multi-phase/std",
	"frame-election-provider-support/std",
	"sp-staking/std",
	"cumulus-primitives-core/std",
	"pallet-utility/std",
	"frame-benchmarking/std",

	# DKG dependencies
	"dkg-runtime-primitives/std",
	"pallet-bridge-registry/std",
	"pallet-dkg-metadata/std",
	"pallet-dkg-proposals/std",
	"pallet-dkg-proposal-handler/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",

	# DKG dependencies
	"pallet-dkg-proposal-handler/runtime-benchmarks",
	"pallet-dkg-proposals/runtime-benchmarks",
	"pallet-dkg-metadata/runtime-benchmarks",
	"pallet-bridge-registry/runtime-benchmarks",
	"frame-election-provider-support/runtime-benchmarks",
	"pallet-bags-list/runtime-benchmarks",
	"pallet-election-provider-multi-phase/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-indices/runtime-benchmarks",
	"pallet-nomination-pools/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"sp-staking/runtime-benchmarks",
]

integration-tests = []
manual-seal = []
