[package]
name = "pallet-dkg-proposal-handler-rpc-primitives"
version = "0.1.0"
edition = "2021"
authors = ["Webb Tools"]

[dependencies]
jsonrpsee = { version = "0.16.2", features = ["server"] }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "sp-api/std"
]
