[package]
name = "dkg-proposals-rpc-primitives"
version = "0.1.0"
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
sp-api = {  default-features = false,git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-blockchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "sp-api/std"
]
