[package]
name = "dkg-proposals-rpc-primitives"
version = "0.1.0"
description = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "sp-runtime/std",
    "sp-api/std"
]
